--- a/components/PhotoCard/style.scss
+++ b/components/PhotoCard/style.scss
@@ -1,7 +1,7 @@
 @import '../../assets/scss/mixins.scss';
 @import '../../assets/scss/variables.scss';
 
-.photos-container {
+.photo-container {
   display: flex;
   max-width: 70%;
   margin-right: auto;
@@ -15,13 +15,68 @@
   }
 
   &__card {
-    flex: 30%;
-    max-width: 30%;
+    max-width: 33%;
     padding: 0 10px;
     margin-bottom: 1rem;
+    @include mobile {
+      flex: 30%;
+    }
+
+    &:nth-child(1) {
+      height: 140px;
+      @include mobile {
+        height: unset;
+      }
+    }
+    &:nth-child(2) {
+      height: 280px;
+      @include mobile {
+        height: unset;
+      }
+    }
+
+    &:nth-child(3) {
+      height: 220px;
+      @include mobile {
+        height: unset;
+      }
+    }
+
+    &:nth-child(4) {
+      height: 220px;
+      margin-top: -8.5rem;
+      @include mobile {
+        height: unset;
+        margin-top: 0;
+      }
+    }
+
+    &:nth-child(6) {
+      height: 220px;
+      margin-top: -3.5rem;
+      @include mobile {
+        height: unset;
+        margin-top: 0;
+      }
+    }
+
+    &:nth-child(7) {
+      height: 280px;
+      margin-top: -5.5rem;
+      @include mobile {
+        height: unset;
+        margin-top: 0;
+      }
+    }
+
+    @include mobile {
+      flex: 50%;
+      max-width: 50%;
+    }
 
     &--photo {
       width: 100%;
+      height: 100%;
       object-fit: cover;
       position: relative;
       margin-bottom: 1rem;
@@ -34,6 +89,7 @@
 
       img {
         width: 100%;
+        height: 100%;
         vertical-align: middle;
         filter: brightness(0.5);
         border-radius: 5px;
@@ -54,17 +110,6 @@
         font-size: 0.5rem;
         line-height: 1.5;
       }
-    }
-
-    @include mobile {
-      flex: 50%;
-      max-width: 50%;
-    }
-
-    @media screen and (max-width: 600px) {
-      -ms-flex: 100%;
-      flex: 100%;
-      max-width: 100%;
     }
   }
 }
