--- a/components/PhotoCard/style.scss
+++ b/components/PhotoCard/style.scss
@@ -18,8 +18,9 @@
     width: 33%;
     padding: 0 10px;
     margin-bottom: 1rem;
+
     @include mobile {
-      flex: 30%;
+      width: 50%;
     }
 
     &:nth-child(1) {
@@ -63,16 +64,10 @@
     &:nth-child(7) {
       height: 280px;
       margin-top: -5.5rem;
-
       @include mobile {
         height: unset;
         margin-top: 0;
       }
-    }
-
-    @include mobile {
-      flex: 50%;
-      max-width: 50%;
     }
 
     &--photo {
@@ -88,10 +83,10 @@
         transform: scale(1.05);
       }
 
-      img {
+      .image {
         width: 100%;
         height: 100%;
-        vertical-align: middle;
+        object-fit: cover;
         filter: brightness(0.5);
         border-radius: 5px;
       }
