--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -23,9 +23,8 @@ html {
 }
 
 .container {
-  max-width: 80%;
-  margin: 3rem auto 0;
-
+  width: 100%;
+  max-width: none;
   @include mobile {
     max-width: 100%;
     margin: 0;
@@ -33,5 +32,7 @@ html {
 }
 
 .fixed {
+  width: 100%;
   overflow-y: hidden;
+  position: fixed;
 }
